--- a/default.css
+++ b/default.css
@@ -77,3 +77,15 @@ search-icon {
   margin-left: 20px;
   font-size: 20px;
 }
+
+.hide {
+  display: none;
+}
+
+.hide-login {
+  display: none;
+}
+
+.hide-menu {
+  display: none;
+}
