--- a/public/default.css
+++ b/public/default.css
@@ -133,11 +133,20 @@ height: 20px;
 
 #dish-box {
   /*margin-top: -10px;*/
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 30%;
+  margin-right: 30%;
   margin-bottom: -5px;
 }
 
 #the-vote {
   margin-bottom: 10px;
+}
+
+#poster-name {
+  color: gainsboro;
+  margin-left: 30%;
+}
+
+#dish-options {
+  text-align: center;
 }
